[gd_scene load_steps=2 format=3 uid="uid://b38sd3m8uji6h"]

[ext_resource type="Script" path="res://level_completed.gd" id="1_2xein"]

[node name="LevelCompleted" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)
script = ExtResource("1_2xein")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
horizontal_alignment = 1

[node name="TimeLabelContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12

[node name="YourTimeLabel" type="Label" parent="CenterContainer/VBoxContainer/TimeLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Your Time: 17.281"

[node name="BestTimeLabel" type="Label" parent="CenterContainer/VBoxContainer/TimeLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Best Time: 12.381"

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Next Level"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
